--- a/Guia1_20245281/pricing-card/pricing.html
+++ b/Guia1_20245281/pricing-card/pricing.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="bg-slate-800">
-    <div>
-      <div>
+    <div class="flex items-center justify-center min-h-screen">
+      <div class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-6">
         <!-- Card 1 -->
         <div>
           <div>
