--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,23 @@
     <title>Guias de Desarrollo Web 2</title>
 </head>
 <body>
-    
+    <h2>Actividades de Guia 1</h2>
+    <div>
+        <div>
+            <a href="./Guia1_20245281/pricing-card/pricing.html">Tarjetas de Precios - Ejercicio 1</a>
+        </div>
+        <div>
+            <a href="./Guia1_20245281/producto/producto.html">Pagina de Producto - Ejercicio 2</a>
+        </div>
+        <div>
+            <a href="./Guia1_20245281/galeria/galeria.html">Galeria de Imagenes - Ejercicio 3</a>
+        </div>
+        <div>
+            <a href="./Guia1_20245281/login/login.html">Pagina de Login - Ejercicio 4</a>
+        </div>
+        <div>
+            <a href="./Guia1_20245281/clipboard/index.html">Clipboard Landing Page - Ejercicio 5</a>
+        </div>
+    </div>
 </body>
 </html>
