--- a/Index.html
+++ b/Index.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Guias de Desarrollo Web 2</title>
 </head>
-<body>
-    <h2>Actividades de Guia 1</h2>
-    <div>
-        <div>
-            <a href="./Guia1_20245281/pricing-card/pricing.html">Tarjetas de Precios - Ejercicio 1</a>
-        </div>
-        <div>
-            <a href="./Guia1_20245281/producto/producto.html">Pagina de Producto - Ejercicio 2</a>
-        </div>
-        <div>
-            <a href="./Guia1_20245281/galeria/galeria.html">Galeria de Imagenes - Ejercicio 3</a>
-        </div>
-        <div>
-            <a href="./Guia1_20245281/login/login.html">Pagina de Login - Ejercicio 4</a>
-        </div>
-        <div>
-            <a href="./Guia1_20245281/clipboard/index.html">Clipboard Landing Page - Ejercicio 5</a>
+<body class="p-4 md:p-8 bg-stone-500">
+    <h2 class="text-2xl bg-gray-300 md:text-3xl font-bold capitalize mb-6 max-w-4xl mx-auto rounded-lg p-2">Actividades de Guia 1</h2>
+    <hr class="mb-6 max-w-4xl mx-auto">
+    <div class="max-w-4xl mx-auto bg-gray-300 rounded-lg p-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/pricing-card/pricing.html" class="font-semibold">Tarjetas de Precios - Ejercicio 1</a>
+            </div>
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/producto/producto.html" class="font-semibold">Pagina de Producto - Ejercicio 2</a>
+            </div>
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/galeria/galeria.html" class="font-semibold">Galeria de Imagenes - Ejercicio 3</a>
+            </div>
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/login/login.html" class="font-semibold">Pagina de Login - Ejercicio 4</a>
+            </div>
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/clipboard/index.html" class="font-semibold">Clipboard Landing Page - Ejercicio 5</a>
+            </div>
         </div>
     </div>
 </body>
