--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,9 @@
             <div class="p-4 border rounded hover:bg-gray-100">
                 <a href="./Guia1_20245281/clipboard/index.html" class="font-semibold">Clipboard Landing Page - Ejercicio 5</a>
             </div>
+            <div class="p-4 border rounded hover:bg-gray-100">
+                <a href="./Guia1_20245281/personal/Liverpool.html" class="font-semibold">Pagina Personal - Ejercicio 6</a>
+            </div>
         </div>
     </div>
 </body>
