--- a/Guia1_20245281/personal/Liverpool.html
+++ b/Guia1_20245281/personal/Liverpool.html
@@ -14,7 +14,7 @@
     </header>
 
     <!--Seccion 1-->
-    <section class="p-8 text-center">
+    <section class="p-8 text-center bg-red-800 rounded-lg mt-6">
         <h2 class="text-red-100 text-2xl md:text-3xl font-semibold mb-4 font-bold">Que es Liverpool FC</h2>
         <p class="max-w-3xl mx-auto text-red-100">Liverpool Football Club es un club de profesional de fútbol inglés fundado en 1892 por John Houlding.
             Es el club más exitoso en la historia del fútbol inglés y actualmente es propiedad de Fenway Sport Group.
@@ -23,7 +23,7 @@
     </section>
 
     <!--Seccion 2-->
-    <section class="p-8 text-center">
+    <section class="p-8 text-center bg-red-800 rounded-lg mt-6">
         <h2 class="text-red-100 text-2xl md:text-3xl font-semibold mb-4 font-bold">Historia del Club</h2>
         <p class="max-w-3xl mx-auto text-red-100">El club actualmente forma parte de la English Premier League donde forma parte del Big Six que son los clubes de mayor poder economico en la liga.
             El equipo juega sus partidos de local en el estadio conocido como Anfield, ubicado en la ciudad de Liverpool el cual ha acompañado a los hinchas durante más de 100 años.
@@ -33,7 +33,7 @@
     </section>
 
     <!--Seccion 3-->
-    <section class="p-8">
+    <section class="p-8 bg-red-800 rounded-lg mt-6">
         <h2 class="text-red-100 text-2xl md:text-3xl font-semibold mb-6 text-center">Títulos Ganados</h2>
         
         <!-- Tabla de títulos con divs -->
@@ -73,7 +73,7 @@
     </section>
 
     <!--Seccion 4-->
-    <section class="p-8">
+    <section class="p-8 bg-red-800 rounded-lg mt-6">
         <h2 class="font-bold text-red-100 text-2xl md:text-3xl font-semibold mb-8 text-center">Jugadores Leyendas</h2>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
@@ -107,6 +107,6 @@
     </section>
 
     <!-- Footer de la página -->
-    <footer class="text-red-100 bg-red-800 rounded-lg p-6">Diego Alejandro Orellana Estrada - 2026</footer>
+    <footer class="text-red-900 bg-red-100 rounded-lg p-6">Diego Alejandro Orellana Estrada - 2026</footer>
 </body>
 </html>
